--- a/app/src/main/res/layout/wifi_info.xml
+++ b/app/src/main/res/layout/wifi_info.xml
@@ -11,14 +11,14 @@
         android:layout_alignParentStart="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="13sp"
         tools:text="name"/>
     <TextView
         android:id="@+id/text_bssid"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:layout_marginLeft="200dp"
+        android:textSize="13sp"
         tools:text="name"/>
     <TextView
         android:id="@+id/text_rssi"
@@ -26,6 +26,6 @@
         android:layout_alignParentEnd="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="13sp"
         tools:text="name"/>
 </RelativeLayout>
