--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.FindActivity"
-    android:background="@drawable/map_test">
+    tools:context=".activity.FindActivity">
     <TextView
         android:id="@+id/text_name"
         android:layout_width="match_parent"
