--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -4,28 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.AdminActivity">
+    tools:context=".activity.AdminActivity"
+    android:background="@drawable/admin_page"
+    >
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FloorList"
+        android:text=""
         android:textSize="30dp"/>
 
     <Button
         android:id="@+id/btn_four"
-        android:layout_marginBottom="30dp"
-        android:layout_marginTop="300dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@id/btn_five"
-        android:text="Four" />
+        android:layout_marginStart="318dp"
+        android:layout_marginTop="330dp"
+        android:text=""
+        android:background="#00000000"
+        />
+
     <Button
         android:id="@+id/btn_five"
-        android:layout_below="@id/btn_four"
-        android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:text="Five" />
+        android:layout_marginLeft="318dp"
+        android:layout_marginTop="390dp"
+        android:text=""
+        android:background="#00000000"
+        />
 </RelativeLayout>
