--- a/app/src/main/res/layout/choose_info.xml
+++ b/app/src/main/res/layout/choose_info.xml
@@ -12,9 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:text="401호"
+        android:textColor="#ffffff"
         android:textSize="30dp"
         android:textStyle="bold"
-        android:background="#00000000"
+        android:background="#c0c0c0"
         android:padding="10dp"/>
 
 </androidx.cardview.widget.CardView>
