--- a/app/src/main/res/layout/choose_info.xml
+++ b/app/src/main/res/layout/choose_info.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardElevation ="0dp"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="10dp"
+    android:layout_margin="10dp"
+    >
 
     <Button
         android:id="@+id/btn_class"
@@ -16,6 +18,8 @@
         android:textSize="30dp"
         android:textStyle="bold"
         android:background="#c0c0c0"
-        android:padding="10dp"/>
+        android:padding="10dp"
+
+        />
 
 </androidx.cardview.widget.CardView>
