--- a/app/src/main/res/layout/activity_floor_five.xml
+++ b/app/src/main/res/layout/activity_floor_five.xml
@@ -5,20 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white">
-
-    <TextView
+    android:background="#808080">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="50dp"
-        android:padding="10dp"
-        android:textColor="@color/black"
-        android:layout_marginBottom="30dp"
-        android:text="Five"/>
+        android:orientation="horizontal"
+        android:background="#000000"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/fifth_floor"
+            android:layout_gravity="center"
+            android:layout_marginLeft="75dp"
+            />
 
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_classroom"
         android:padding="20dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:background="#00000000"
+        />
 </LinearLayout>
