--- a/app/src/main/res/layout/choose_info.xml
+++ b/app/src/main/res/layout/choose_info.xml
@@ -5,16 +5,21 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardElevation ="0dp"
-    app:cardCornerRadius="10dp">
+    app:cardCornerRadius="10dp"
+    android:layout_margin="10dp"
+    >
 
     <Button
         android:id="@+id/btn_class"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:text="401호"
+        android:textColor="#ffffff"
         android:textSize="30dp"
         android:textStyle="bold"
-        android:background="#00000000"
-        android:padding="10dp"/>
+        android:background="#c0c0c0"
+        android:padding="10dp"
+
+        />
 
 </androidx.cardview.widget.CardView>
