--- a/app/src/main/res/layout/activity_find.xml
+++ b/app/src/main/res/layout/activity_find.xml
@@ -17,4 +17,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="click"/>
+
+    <LinearLayout
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:gravity="center"
+        android:background="@drawable/radar_background"
+        >
+
+        <ImageView
+            android:id="@+id/radar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/radar"
+            android:layout_marginLeft="65dp"
+        />
+
+    </LinearLayout>
+
 </LinearLayout>
