--- a/app/src/main/res/layout/activity_find_four.xml
+++ b/app/src/main/res/layout/activity_find_four.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:textSize="30sp"
             android:layout_gravity="end"
+            android:layout_marginEnd="50dp"
             tools:text="Hi"/>
 
 
